--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
